force-app/main/default/objects/NetSuite_Financial__c/NetSuite_Financial__c.object-meta.xml
<CustomObject>
    <description>Posting transactions from NetSuite including Cash Sales, Invoices, Customer Payments, Credit Memos, Cash Refunds, Journal Entries, etc.</description>
    <label>Financial</label>
    <nameField>
        <label>Transaction Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>