force-app/main/default/objects/NetSuite_Financial__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>If invoice transaction, displays invoice due date.
If payment transaction, field will be blank.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>