force-app/main/default/objects/NetSuite_Financial__c/fields/Federal_Universal_Service_Fund__c.field-meta.xml
<CustomField>
    <fullName>Federal_Universal_Service_Fund__c</fullName>
    <inlineHelpText>Total FUSF charges for the invoice period.</inlineHelpText>
    <label>Federal Universal Service Fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>