force-app/main/default/objects/NetSuite_Financial__c/fields/Invoice_Count_for_Churn__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count_for_Churn__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Invoice Count for Churn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>