force-app/main/default/objects/NetSuite_Financial__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <inlineHelpText>Displays internal tracking number for payment transactions.</inlineHelpText>
    <label>Memo</label>
    <length>75</length>
    <type>Text</type>
</CustomField>