force-app/main/default/objects/NetSuite_Financial__c/fields/On_Demand_International_Audio_Charges__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_International_Audio_Charges__c</fullName>
    <label>On Demand International Audio Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>