force-app/main/default/objects/NetSuite_Financial__c/fields/On_Demand_International_Audio_Minutes__c.field-meta.xml
<CustomField>
    <fullName>On_Demand_International_Audio_Minutes__c</fullName>
    <label>On Demand International Audio Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>