force-app/main/default/objects/NetSuite_Financial__c/fields/Other_Credits__c.field-meta.xml
<CustomField>
    <fullName>Other_Credits__c</fullName>
    <inlineHelpText>Total Other Credits applied for the invoice period.</inlineHelpText>
    <label>Other Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>