force-app/main/default/objects/NetSuite_Financial__c/fields/Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Balance__c</fullName>
    <label>Overdue Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>