force-app/main/default/objects/NetSuite_Financial__c/fields/Recurring_Charge__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Charge__c</fullName>
    <description>Stores the Recurring Charge amount for a given invoice.</description>
    <label>Recurring Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>