force-app/main/default/objects/NetSuite_Financial__c/fields/Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Total__c</fullName>
    <inlineHelpText>Total commissionable revenue (Invoice Total minus FUSF) for the invoice period.</inlineHelpText>
    <label>Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>