force-app/main/default/objects/NetSuite_Financial__c/fields/RT_Financial_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Financial_Id__c</fullName>
    <description>Migration</description>
    <externalId>true</externalId>
    <label>RT Financial Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>