force-app/main/default/objects/NetSuite_Financial__c/fields/SFBProcessed__c.field-meta.xml
<CustomField>
    <fullName>SFBProcessed__c</fullName>
    <label>SFBProcessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>