force-app/main/default/objects/NetSuite_Financial__c/fields/State_Local_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>State_Local_Sales_Tax__c</fullName>
    <label>State/Local Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>