force-app/main/default/objects/NetSuite_Financial__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of transaction in NetSuite.</description>
    <inlineHelpText>Status of transaction (open, not deposited, paid in full).</inlineHelpText>
    <label>Status</label>
    <length>75</length>
    <type>Text</type>
</CustomField>