force-app/main/default/objects/NetSuite_Financial__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <description>Transaction subtotal before any discounts, shipping cost, handling cost or tax.</description>
    <inlineHelpText>Amount due (total charges + FUSF) for invoice transaction.</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>