force-app/main/default/objects/NetSuite_Financial__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <length>25</length>
    <type>Text</type>
</CustomField>