force-app/main/default/objects/NetSuite_Financial__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Transaction total.</description>
    <inlineHelpText>If invoice transaction, displays total amount due.
If payment transaction, shows payment total.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>