force-app/main/default/objects/NetSuite_Financial__c/fields/Total_VoiP_and_Audio_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_VoiP_and_Audio_Minutes__c</fullName>
    <formula>VoIP_Audio_Minutes__c +  Total_Audio_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total VoiP and Audio Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>