force-app/main/default/objects/NetSuite_Financial__c/fields/Total_Web__c.field-meta.xml
<CustomField>
    <fullName>Total_Web__c</fullName>
    <inlineHelpText>Total web charges (subscriptions, per-minute, corporate license) for the invoice period.</inlineHelpText>
    <label>Total Web Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>