force-app/main/default/objects/NetSuite_Financial__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Date of transaction in NetSuite.</description>
    <inlineHelpText>Accounting posting date.</inlineHelpText>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>