force-app/main/default/objects/NetSuite_Financial__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Type of transaction (cash sale, invoice, payment, credit memo, cash refund, customer refund, customer deposit).</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Refund</fullName>
            </value>
            <value>
                <fullName>Cash Sale</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Customer Deposit</fullName>
            </value>
            <value>
                <fullName>Customer Refund</fullName>
            </value>
            <value>
                <fullName>Deferred Revenue</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Sales Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>