force-app/main/default/objects/NetSuite_Financial__c/fields/VoiP_and_Audio_Charges__c.field-meta.xml
<CustomField>
    <fullName>VoiP_and_Audio_Charges__c</fullName>
    <formula>VoIP_Audio_Charges__c +  Total_Audio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total VoiP and Audio Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>