force-app/main/default/objects/NetSuite_Financial__c/fields/VoIP_Audio_Charges__c.field-meta.xml
<CustomField>
    <fullName>VoIP_Audio_Charges__c</fullName>
    <label>VoIP Audio Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>