force-app/main/default/objects/NetSuite_Financial__c/fields/VoIP_Audio_Minutes__c.field-meta.xml
<CustomField>
    <fullName>VoIP_Audio_Minutes__c</fullName>
    <label>VoIP Audio Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>