force-app/main/default/objects/NetSuite_Financial__c/listViews/Invoices_This_Month.listView-meta.xml
<ListView>
    <fullName>Invoices_This_Month</fullName>
    <columns>Account__c</columns>
    <columns>Total__c</columns>
    <columns>Total_Audio__c</columns>
    <columns>Total_Audio_Minutes__c</columns>
    <columns>Total_Web__c</columns>
    <columns>Total_Web_Minutes__c</columns>
    <columns>Other_Charges__c</columns>
    <columns>Other_Credits__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Invoices - This Month</label>
</ListView>